// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> rendering should render correctly 1`] = `
<Header__HeaderWrapper
  data-testid="site-header"
>
  <Header__StyledHeader
    fullWidth={false}
    homeLink="http://localhost:3001/"
    navigation={
      <React.Fragment>
        <Header__StyledNav>
          <li>
            <button
              className="login"
              type="button"
            >
              <LoginIcon
                focusable="false"
                viewBox="0 0 36 36"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              />
              <span>
                Log in
              </span>
            </button>
          </li>
        </Header__StyledNav>
        <ul
          className="links horizontal"
        >
          <li>
            <NavLink
              activeClassName="active"
              aria-current="page"
              onClick={[Function]}
              to="/"
            >
              <span
                className="linklabel"
              >
                Nieuwe melding
              </span>
            </NavLink>
          </li>
        </ul>
      </React.Fragment>
    }
    tall={false}
    title="Meldingen"
  />
</Header__HeaderWrapper>
`;

exports[`<Header /> should render correctly when logged in 1`] = `
<Header__HeaderWrapper
  data-testid="site-header"
>
  <Header__StyledHeader
    fullWidth={false}
    homeLink="http://localhost:3001/"
    navigation={
      <React.Fragment>
        <Header__StyledNav>
          <li>
            Ingelogd als: 
            <strong>
              
            </strong>
            <button
              className="header-component__logout"
              type="button"
            >
              <LogoutIcon
                focusable="false"
                viewBox="0 0 36 36"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              />
              <span>
                Uitloggen
              </span>
            </button>
          </li>
        </Header__StyledNav>
        <ul
          className="links horizontal"
        >
          <li>
            <NavLink
              activeClassName="active"
              aria-current="page"
              onClick={[Function]}
              to="/"
            >
              <span
                className="linklabel"
              >
                Nieuwe melding
              </span>
            </NavLink>
          </li>
          <li>
            <NavLink
              activeClassName="active"
              aria-current="page"
              to="/manage/incidents"
            >
              <span
                className="linklabel"
              >
                Afhandelen
              </span>
            </NavLink>
          </li>
        </ul>
      </React.Fragment>
    }
    tall={false}
    title="Meldingen"
  />
</Header__HeaderWrapper>
`;
